syntax = "proto3";

package auth;

service AuthService {
  rpc GenerateToken (TokenPayload) returns (TokenResponse);
  rpc ValidateToken (TokenValidationRequest) returns (UserPayload);
}

message TokenPayload {
  string userId = 1;
  string email = 2;
  string role = 3;
  string deviceId = 4;
  string ipAddress = 5;
  string userAgent = 6;
}

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message TokenValidationRequest {
  string access_token = 1;
}

message UserPayload {
  string userId = 1;
  string email = 2;
  string role = 3;
  int64 issuedAt = 4;
  int64 expiresAt = 5;
}
